# flux-atlas

./: .gitignore  README.md  Tiltfile  playwright.config.ts
.github/workflows/: build-image.yml  build-images.yml  integration-tests.yml
api/: .gitignore  Cargo.toml  Dockerfile
api/src/: main.rs
api/src/fluxcd/: git_repo.rs  helm_chart.rs  helm_release.rs  helm_repo.rs  kustomization.rs  oci_repo.rs  utils.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/fluxcd/: git_repo.rs  helm_chart.rs  helm_release.rs  helm_repo.rs  kustomization.rs  mod.rs  oci_repo.rs  utils.rs
deploy/: flux.yml  kind.sh  rbac.yaml  service.yaml
deploy/kind/: go.sh
deploy/manifests/: api-deployment.yaml  api-service.yaml  deployment.yaml  ingress.yaml  rbac.yaml  ui-deployment.yaml  ui-service.yaml
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/lib/: types.d.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +page.ts
frontend/tests/: test.ts
frontend/tests/manifests/: helm-release-kps.yml  helm-repo.yml
src/lib/: index.ts  utils.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  GitRepoDetails.svelte  OciRepoDetails.svelte  ResourceCard.svelte  ResourceDetails.svelte  YamlModalButton.svelte  utils.server.ts
src/routes/components/: GitRepoDetails.svelte  (+7 more)
tests/: test.ts
tests/manifests/: helm-release-kps.yml
ui/: .dockerignore  .gitignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js
ui/src/: config.js
ui/tests/: test.ts
(+44 files in other folders)
